--- a/src/scss/components/_global.scss
+++ b/src/scss/components/_global.scss
@@ -14,11 +14,10 @@
   --dark: rgb(calc(var(--red) - 75), calc(var(--green) - 75), calc(var(--blue) - 75)); // darker color
   --hover: rgb(calc(var(--red) + 50), calc(var(--green) + 50), calc(var(--blue) + 50)); // lighter color
   --bg: rgb(var(--rgb) / 4%);
-  // Black or white color based on https://css-tricks.com/css-variables-calc-rgb-enforcing-high-contrast-colors/
+  // Black or white color based on https://css-tricks.com/switch-font-color-for-different-backgrounds-with-css/
   --tolerance: 210; // [0-255] Greater tolerance allow lighter colors with white text
-  --bw: calc(((var(--red) * 0.2126) + (var(--green) * 0.7152) + (var(--blue) * 0.0722) - var(--tolerance)) * -100000);
-  /* Keep old rgba() to support clamp() for alpha */
-  --text: rgba(var(--bw), var(--bw), var(--bw), clamp(0.7, var(--bw), 1)); // White rgba(255, 255, 255, 1) / Black rgba(0, 0, 0, 0.7)
+  --bw: calc((var(--red)*0.2126 + var(--green)*0.7152 + var(--blue)*0.0722 - var(--tolerance)) * -10000000);
+  --text: hsl(0 0% calc(var(--bw)*1%) / clamp(70%, calc(var(--bw)*1%), 100%)); // White hsl(0 0% 100% / 100%) / Black hsl(0 0% 0% / 70%)
   --msg: var(--color);
 
   position: fixed;
